Fix "Jump to" input that was not working correctly

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -3081,11 +3081,14 @@ input.subtle{
 .input-append input.subtle{
     font-size: 13px;
 }
-input.subtle:focus,
-.nav .input > form > input[type="text"]:focus
+input.subtle:focus
 {
 	width: 200px;
 }
+.jump-width-input{
+	transition: width 1000s;
+}
+.nav
 .input-submit{
 	margin-left: 10px;
     height: 1em;
